pkg/templates/charts/toggle/image-based-install-operator/templates/image-based-install-config_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ibi-config-serving-certs
  creationTimestamp: null
  name: image-based-install-config
spec:
  ports:
  - name: config-server
    port: 8000
    protocol: TCP
    targetPort: 0
  selector:
    app: image-based-install-operator
status:
  loadBalancer: {}
