pkg/templates/charts/toggle/image-based-install-operator/templates/webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: webhook-certs
  creationTimestamp: null
  name: webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: image-based-install-operator
status:
  loadBalancer: {}
